Working on #28, changing template to avoid multi-line navbar: - moved "burn after reading" & "discussion" into "options" menu in "bootstrap" template - added seperate "bootstrap-compact" template that also moves the   formats into the same "options" menu - fixing horizontal scroll bar glitch in mobile navbar

--- a/css/bootstrap/zerobin.css
+++ b/css/bootstrap/zerobin.css
@@ -5,6 +5,29 @@ body {
 	padding: 70px 0 30px 0;
 }
 
+.navbar-nav {
+	margin: 0;
+}
+
+.dropdown-menu > li > label, .dropdown-menu > li > div {
+	clear: both;
+	display: block;
+	font-weight: normal;
+	line-height: 1.42857;
+	white-space: nowrap;
+}
+
+.dropdown-menu > li > label {
+	color: #333;
+	padding: 3px 20px 3px 40px;
+}
+
+.dropdown-menu > li > div {
+	color: #777;
+	padding: 3px 20px;
+	cursor: default;
+}
+
 #deletelink {
 	float: right;
 }
